name: project0
version: 1.0.0
license: BSD3
license-file: LICENSE
cabal-version: >= 1.10
build-type: Simple

-- Yields fPIC errors:
foreign-library profile
    build-depends: base, dhall
    hs-source-dirs: .
    type: native-shared
    other-modules:
      Main
    default-language: Haskell2010
    c-sources:
        cbits/flib.c

-- Works:
-- executable profile
--     main-is: Main.hs
--     build-depends: base, unordered-containers, lens
--     other-modules:
--       Main
--     default-language: Haskell2010